jdupes 1.22.0

- libjodycode is now required to build and run jdupes (see INSTALL)
- Move all jody_* code to libjodycode and remove from jdupes
- Add -E/--error-on-dupe option to terminate immediately if any dupe is found
- Support showing x32 ABI in version information
- Several build system improvements for macOS, BSD, and linking in libxxhash

jdupes 1.21.3

- Fix exit behavior when no valid directories are given
- Only act on "normal" files and directories

jdupes 1.21.2

- Work around macOS data corruption (clonefile may wreck compressed files)
- Major performance fix in the double traversal prevention tree code
- Added undocumented '-9' benchmark option for testing traversal code
- Extra error checks to try to finally solve a very rare crash bug
- Tiny code size reduction by discarding unused xxHash code
- Build system can now build native M1 + x86_64 fat binares on macOS
- jody_hash re-added as a build-time option (mainly for old/embedded systems)
- Many options/features/safety checks can now be selectively compiled out
- New 'make BARE_BONES=1' option builds the most minimal jdupes possible

jdupes 1.21.1

- Reinstate '-I/--isolate' by popular demand; use at your own risk!

jdupes 1.21.0

- Remove '-I/--isolate' which has never worked correctly
- Fix compiling when NO_HARDLINKS and NO_SYMLINKS are both defined
- Increased stack size limits to enable deeper recursion without crashing
- Fixes to make compilation under Cygwin (instead of MSYS2 MinGW) work
- Remove the temporary '-X help' warning about changes in functionality
- Some minor under-the-hood changes for future enhancements

jdupes 1.20.2

- Interactive deletion now offers "link set" options too

jdupes 1.20.1

- Interactive deletion now assumes 'a' when you just hit [ENTER]

jdupes 1.20.0

- Normalize long option hyphenation (CHECK YOUR SHELL SCRIPTS)
- Remove long-deprecated -n/--noempty option (CHECK YOUR SHELL SCRIPTS)
- Fix printout for -P/--partial when progress indicator is active